syntax = "proto3";

package movie;

service MovieService {
  rpc GetMovies (Empty) returns (MovieListResponse);
  rpc GetMovie (MovieIDRequest) returns (MovieResponse);
  rpc CreateMovie (MovieRequest) returns (MovieResponse);
  rpc UpdateMovie (MovieRequest) returns (MovieResponse);
  rpc DeleteMovie (MovieIDRequest) returns (Empty);
}

message Empty {}

message MovieIDRequest {
  int64 id = 1;
}

message MovieRequest {
  int64 id = 1;
  string title = 2;
  string genre = 3;
  string director = 4;
  int32 release_year = 5;
  float rating = 6;
}

message Movie {
  int64 id = 1;
  string title = 2;
  string genre = 3;
  string director = 4;
  int32 release_year = 5;
  float rating = 6;
}

message MovieListResponse {
  repeated Movie movies = 1;
}

message MovieResponse {
  Movie movie = 1;
}
